<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="#ff0e0e0e"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sans.halfway.Startscreen"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:text="@string/register"
        android:id="@+id/bu_signin"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:background="#3f3f3f"
        android:enabled="true"
        android:clickable="true"
        android:layout_marginTop="10dp"
     />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:text="@string/login"
        android:id="@+id/bu_login"
        android:textColor="#ffffff"
        android:background="#ffff578f"
        android:enabled="true"
        android:clickable="true"
        android:layout_marginTop="10dp"
        />

      <EditText
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/mail"
        android:textColor="#ffff578f"
        android:layout_marginTop="10dp"
        android:id="@+id/tv_mail"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/username"
        android:textColor="#ffff578f"
        android:layout_marginTop="10dp"
        android:id="@+id/tv_user"
        />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="10dp"
        android:textColor="#ffff578f"
        android:hint="@string/pwd"
        android:id="@+id/tv_pwd"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:text="@string/skip"
        android:id="@+id/bu_skip"
        android:textColor="#ffffff"
        android:background="#3f3f3f"
        android:enabled="true"
        android:clickable="true"
        android:layout_marginTop="10dp"
        />

</LinearLayout>
