<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="com.example.meetup.MainActivity"
    android:background="#ff0e0e0e"
    android:clickable="true"
    android:focusable="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textfullview1"
        android:background="#ff131313"
        android:textColor="#ffffffff"
        android:padding="1sp"
        android:layout_marginBottom="30sp"
        android:textIsSelectable="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/labelf"
        android:id="@+id/textView4"
        android:textColor="#ffff5890"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:hint="@string/gps_f"
        android:id="@+id/gpsf"
        android:textColor="#ffff5890"
        android:textColorHint="#ff8bb9ff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/labelm"
        android:id="@+id/textView2"
        android:textColor="#ffff5890" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/gps_loc"
        android:id="@+id/gps_my"
        android:textColor="#ffff5890"
        android:focusable="true"
        android:textIsSelectable = "true"
        android:editable="true" />

    <Button
        android:id="@+id/bu_route"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:text="@string/b_map"
        android:textAlignment="center"
        android:layout_gravity="bottom"
        android:textColor="#ffffff"
        android:background="#ffff578f"
        android:enabled="true"
        android:clickable="true" />


</LinearLayout>